--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </div>
         <nav>
             <ul class="navigation-menu">
-                <li class="nav-item"><a href="#">Home</a></li>
-                <li class="nav-item"><a href="#">About</a></li>
-                <li class="nav-item"><a href="#">Services</a></li>
-                <li class="nav-item"><a href="#">Portfolio</a></li>
-                <li class="nav-item"><a href="#">Contact</a></li>
+                <li class="nav-item nav-active"><a href="#">navy salt</a></li>
+                <li class="nav-item"><a href="#">voyager</a></li>
+                <li class="nav-item"><a href="#">drifter</a></li>
+                <li class="nav-item"><a href="#">collection</a></li>
+                <li class="nav-item"><a href="#">contact</a></li>
             </ul>
         </nav>
     </header>
