fix(root): add footer and cassette image

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
             <div class="read-more">
               <a href="">READ MORE</a>
             </div>
-            <h1 class="heading-number">02</h1>
           </div>
         </div>
         <div class="cell04">
@@ -131,9 +130,120 @@
             </div>
           </div>
         </div>
-        <div class="row"></div>
+        <div class="cell05">
+          <h1 class="heading-number">02</h1>
+          <div class="image-container">
+            <div class="collection-image">
+              <img src="./utils/images/collection3.svg" alt="collection" />
+            </div>
+          </div>
+        </div>
+        <div class="cell06">
+          <div class="content-wrapper">
+            <h1 class="collection-title">FIELD CAMERA BAG</h1>
+            <p>
+              Our field camera bag is constructed from 14oz Salt & Pepper canvas
+              and Cambara Meridian English bridle leather. We've put these bags
+              through the ringer in testing and we think you'll approve of the
+              result. Our Camera Bag is fully lined and padded, and features an
+              adjustable shoulder strap and pad, as well as two interior flap
+              pockets for smaller gear and film.
+            </p>
+            <div class="read-more">
+              <a href="">READ MORE</a>
+            </div>
+          </div>
+          <h1 class="heading-number">03</h1>
+        </div>
+        <div class="cell07">
+          <div class="content-wrapper">
+            <h1 class="collection-title-big">VOYAGER DAYPACK</h1>
+          </div>
+        </div>
+        <div class="cell08">
+          <div class="image-container">
+            <div class="collection-image">
+              <img src="./utils/images/collection4.svg" alt="collection" />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+    <section class="cassette">
+      <div class="cassette-item image-container">
+        <img src="./utils/images/cassette-25.svg" alt="cassette" />
+      </div>
+      <div class="cassette-item image-container">
+        <img src="./utils/images/cassette-26.svg" alt="cassette" />
+      </div>
+      <div class="cassette-item image-container">
+        <img src="./utils/images/cassette-24.svg" alt="cassette" />
+      </div>
+      <div class="cassette-item image-container">
+        <img src="./utils/images/cassette-28.svg" alt="cassette" />
+      </div>
+      <div class="cassette-item image-container casstte-more-icon">
+        <img src="./utils/images/cassette-23.svg" alt="cassette" />
+      </div>
+      <div class="cassette-item image-container">
+        <img src="./utils/images/cassette-27.svg" alt="cassette" />
+      </div>
+    </section>
+    <div class="divider"></div>
+    <footer>
+      <div class="footer-container">
+        <div class="first-column">
+          <div class="image-container">
+            <img src="./utils/images/tanner_logo_copyright.svg" alt="logo" />
+          </div>
+          <div class="copyright">
+            <p>© tanner goods portland ore 2016</p>
+          </div>
+        </div>
+        <div class="second-column">
+          <ul class="product-category">
+            <li class="nav-active">FINDA</li>
+            <li>STORE</li>
+            <li>SIZING</li>
+            <li>CARE</li>
+            <li>WATCH</li>
+          </ul>
+          <ul class="social-media">
+            <li>facebook</li>
+            <li class="nav-active">pinterest</li>
+            <li>twitter</li>
+            <li>instagram</li>
+          </ul>
+        </div>
+        <div class="third-column">
+          <div class="address-container">
+            <p class="address-1">Sebazzo Ltd, Unit 3F2</p>
+            <p>Zetland House</p>
+            <p>5-25 Scrutton Street</p>
+            <p>London EC2A 4HJ</p>
+          </div>
+        </div>
+        <div class="fourth-column">
+          <div class="email-container">
+            <h3>Email Newsletters</h3>
+            <p>
+              Sign up for new TANNER GOODS content, updates, surveys & offers.
+            </p>
+            <div class="email-input">
+              <input type="text" />
+              <button>
+                <div class="btn-arrow-icon image-container">
+                  <img
+                    src="./utils/images/footer-mail-arrow.svg"
+                    alt="send email"
+                  />
+                </div>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
