feature(root): add navigation

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
         </ul>
       </nav>
     </header>
+    <div class="page-navigator">
+      <div class="arrow-btn-container">
+        <button class="image-container" id="prev">
+          <img src="./utils/images/arrow-up-page.svg" alt="up" />
+        </button>
+        <button class="image-container" id="next">
+          <img src="./utils/images/arrow-down-page.svg" alt="down" />
+        </button>
+      </div>
+
+      <div class="page-numbers">
+        <button class="page-number page-number-active" data-section="section1">
+          01
+        </button>
+        <button class="page-number" data-section="section2">02</button>
+        <button class="page-number" data-section="section3">03</button>
+        <button class="page-number" data-section="section4">04</button>
+        <button class="page-number" data-section="section5">05</button>
+      </div>
+    </div>
     <section class="section-one">
       <div class="hero-wrapper">
         <h3>Designed for utility</h3>
