fix(root): add responsiveness

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <img src="./utils/images/tanner_logo.svg" />
       </div>
       <nav id="header-nav">
+        <div class="menu-toggle">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
         <ul class="navigation-menu">
           <li class="nav-item nav-active" data-nav-id="nav1">
             <a href="#section1">navy salt</a>
@@ -128,9 +133,7 @@
         <div class="cell01">
           <h1 class="heading-number">01</h1>
           <div class="image-container">
-            <div class="collection-image">
-              <img src="./utils/images/collection1.svg" alt="collection" />
-            </div>
+            <img src="./utils/images/collection1.svg" alt="collection" />
           </div>
         </div>
         <div class="cell02">
@@ -162,17 +165,13 @@
         </div>
         <div class="cell04">
           <div class="image-container">
-            <div class="collection-image">
-              <img src="./utils/images/collection2.svg" alt="collection" />
-            </div>
+            <img src="./utils/images/collection2.svg" alt="collection" />
           </div>
         </div>
         <div class="cell05">
           <h1 class="heading-number">02</h1>
           <div class="image-container">
-            <div class="collection-image">
-              <img src="./utils/images/collection3.svg" alt="collection" />
-            </div>
+            <img src="./utils/images/collection3.svg" alt="collection" />
           </div>
         </div>
         <div class="cell06">
@@ -199,9 +198,7 @@
         </div>
         <div class="cell08">
           <div class="image-container">
-            <div class="collection-image">
-              <img src="./utils/images/collection4.svg" alt="collection" />
-            </div>
+            <img src="./utils/images/collection4.svg" alt="collection" />
           </div>
         </div>
       </div>
