fix(root): add responsive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <button class="page-number" data-section="section5">05</button>
       </div>
     </div>
-    <section id="section1" class="section-one">
+    <section id="section1" class="section-img section-one">
       <div class="hero-wrapper">
         <h3>Designed for utility</h3>
         <h1>NAVY SALT & PEPPER</h1>
@@ -75,7 +75,7 @@
     <div class="divider"></div>
     <section
       id="section2"
-      class="section-two banner-section"
+      class="section-img section-two banner-section"
       data-src="./utils/images/hero_image2.svg"
     >
       <div class="hero-wrapper">
@@ -100,7 +100,7 @@
     <div class="divider"></div>
     <section
       id="section3"
-      class="section-three banner-section"
+      class="section-img section-three banner-section"
       data-src="./utils/images/hero_image3.svg"
     >
       <div class="hero-wrapper">
