fix(root): add responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="section1" class="section-img section-one">
       <div class="hero-wrapper">
         <h3>Designed for utility</h3>
-        <h1>NAVY SALT & PEPPER</h1>
+        <h1 class="heading-text">NAVY SALT & PEPPER</h1>
         <a class="btn-gear">Gear UP</a>
       </div>
     </section>
@@ -80,7 +80,7 @@
     >
       <div class="hero-wrapper">
         <div class="title">
-          <h1>VOYAGER DAYPACK</h1>
+          <h1 class="heading-text">VOYAGER DAYPACK</h1>
           <h3>NAVY SALT & PEPPER</h3>
         </div>
         <p class="description">
@@ -113,7 +113,7 @@
           <span>wool felt, and Cambara English bridle leather.</span>
         </p>
         <div class="title">
-          <h1>DRIFTER DOPP KIT</h1>
+          <h1 class="heading-text">DRIFTER DOPP KIT</h1>
           <h3>NAVY SALT & PEPPER</h3>
         </div>
         <p class="decoration-text">NAVY SALT</p>
