fix(root): add lazy loading

--- a/index.html
+++ b/index.html
@@ -48,10 +48,20 @@
     <div class="page-navigator">
       <div class="arrow-btn-container">
         <button class="image-container" id="prev">
-          <img src="./utils/images/arrow-up-page.svg" alt="up" />
+          <img
+            loading="lazy"
+            class="lazy-image"
+            src="./utils/images/arrow-up-page.svg"
+            alt="up"
+          />
         </button>
         <button class="image-container" id="next">
-          <img src="./utils/images/arrow-down-page.svg" alt="down" />
+          <img
+            loading="lazy"
+            class="lazy-image"
+            src="./utils/images/arrow-down-page.svg"
+            alt="down"
+          />
         </button>
       </div>
 
@@ -65,7 +75,11 @@
         <button class="page-number" data-section="section5">05</button>
       </div>
     </div>
-    <section id="section1" class="section-img section-one">
+    <section
+      id="section1"
+      class="section-img section-one lazy-load"
+      data-src="./utils/images/home-slider-slide-3.svg"
+    >
       <div class="hero-wrapper">
         <h3>Designed for utility</h3>
         <h1 class="heading-text">NAVY SALT & PEPPER</h1>
@@ -75,7 +89,7 @@
     <div class="divider"></div>
     <section
       id="section2"
-      class="section-img section-two banner-section"
+      class="section-img section-two banner-section lazy-load"
       data-src="./utils/images/hero_image2.svg"
     >
       <div class="hero-wrapper">
@@ -93,14 +107,20 @@
           <span>to fit just about anyone’s daily routine.</span>
         </p>
         <div class="arrow-down">
-          <img src="./utils/images/arrow_down.svg" alt="arrow down" />
+          <img
+            loading="lazy"
+            class="lazy-image"
+            src="./utils/images/arrow_down.svg"
+            alt="arrow down"
+            class="lazy-image"
+          />
         </div>
       </div>
     </section>
     <div class="divider"></div>
     <section
       id="section3"
-      class="section-img section-three banner-section"
+      class="section-img section-three banner-section lazy-load"
       data-src="./utils/images/hero_image3.svg"
     >
       <div class="hero-wrapper">
@@ -118,7 +138,12 @@
         </div>
         <p class="decoration-text">NAVY SALT</p>
         <div class="arrow-down">
-          <img src="./utils/images/arrow_down.svg" alt="arrow down" />
+          <img
+            loading="lazy"
+            class="lazy-image"
+            src="./utils/images/arrow_down.svg"
+            alt="arrow down"
+          />
         </div>
       </div>
     </section>
@@ -133,7 +158,12 @@
         <div class="cell01">
           <h1 class="heading-number">01</h1>
           <div class="image-container">
-            <img src="./utils/images/collection1.svg" alt="collection" />
+            <img
+              loading="lazy"
+              class="lazy-image"
+              src="./utils/images/collection1.svg"
+              alt="collection"
+            />
           </div>
         </div>
         <div class="cell02">
@@ -165,13 +195,23 @@
         </div>
         <div class="cell04">
           <div class="image-container">
-            <img src="./utils/images/collection2.svg" alt="collection" />
+            <img
+              loading="lazy"
+              class="lazy-image"
+              src="./utils/images/collection2.svg"
+              alt="collection"
+            />
           </div>
         </div>
         <div class="cell05">
           <h1 class="heading-number">02</h1>
           <div class="image-container">
-            <img src="./utils/images/collection3.svg" alt="collection" />
+            <img
+              loading="lazy"
+              class="lazy-image"
+              src="./utils/images/collection3.svg"
+              alt="collection"
+            />
           </div>
         </div>
         <div class="cell06">
@@ -198,29 +238,64 @@
         </div>
         <div class="cell08">
           <div class="image-container">
-            <img src="./utils/images/collection4.svg" alt="collection" />
+            <img
+              loading="lazy"
+              class="lazy-image"
+              src="./utils/images/collection4.svg"
+              alt="collection"
+            />
           </div>
         </div>
       </div>
     </section>
     <section id="section5" class="cassette">
       <div class="cassette-item image-container">
-        <img src="./utils/images/cassette-25.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-25.svg"
+          alt="cassette"
+        />
       </div>
       <div class="cassette-item image-container">
-        <img src="./utils/images/cassette-26.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-26.svg"
+          alt="cassette"
+        />
       </div>
       <div class="cassette-item image-container">
-        <img src="./utils/images/cassette-24.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-24.svg"
+          alt="cassette"
+        />
       </div>
       <div class="cassette-item image-container">
-        <img src="./utils/images/cassette-28.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-28.svg"
+          alt="cassette"
+        />
       </div>
       <div class="cassette-item image-container casstte-more-icon">
-        <img src="./utils/images/cassette-23.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-23.svg"
+          alt="cassette"
+        />
       </div>
       <div class="cassette-item image-container">
-        <img src="./utils/images/cassette-27.svg" alt="cassette" />
+        <img
+          loading="lazy"
+          class="lazy-image"
+          src="./utils/images/cassette-27.svg"
+          alt="cassette"
+        />
       </div>
     </section>
     <div class="divider"></div>
@@ -228,7 +303,12 @@
       <div class="footer-container">
         <div class="first-column">
           <div class="image-container">
-            <img src="./utils/images/tanner_logo_copyright.svg" alt="logo" />
+            <img
+              loading="lazy"
+              class="lazy-image"
+              src="./utils/images/tanner_logo_copyright.svg"
+              alt="logo"
+            />
           </div>
           <div class="copyright">
             <p>© tanner goods portland ore 2016</p>
@@ -268,6 +348,8 @@
               <button>
                 <div class="btn-arrow-icon image-container">
                   <img
+                    loading="lazy"
+                    class="lazy-image"
                     src="./utils/images/footer-mail-arrow.svg"
                     alt="send email"
                   />
